--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -110,7 +110,7 @@ body {
 /* Making the card bigger*/
 
 .card-container {
-  transform: scale(1.5); /* 1.5 = 150%, use 2 for 200% */
+  transform: scale(3); /* 1.5 = 150%, use 2 for 200%, personal note: think about 1.5 as 50% bigger, you don't notice the change that much */
   transform-origin: top center; /* Keeps the card anchored at the top */
 }
 
