Added line to improve mobile resolution

--- a/_layouts/card.html
+++ b/_layouts/card.html
@@ -4,6 +4,7 @@
      <meta charset="UTF-8" />
      <title>{{ page.firstName }} {{ page.lastName }}'s Krögarkort</title>
      <link rel="stylesheet" href="/assets/css/card.css" />
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
      <div class="card-container" onclick="flipCard(this)">
